fix gap under videos

--- a/app/less/default/modules/project-video.less
+++ b/app/less/default/modules/project-video.less
@@ -7,6 +7,7 @@
 .project-video {
 
     video {
+        display: block;
         width: 100%;
     }
 
